# software_renderer

./: .gitignore  CMakeLists.txt  README.md  win_create_vsproject.bat
demo/: sdl2_helper.h
demo/cube/: main.cpp
demo/fps/: main.cpp
render/: render.cpp  render_threading.cpp
render/include/: render.h  render_threading.h
